# opengpts

./: docker-compose.yml
backend/: pyproject.toml
backend/app/: agent.py  checkpoint.py  ingest.py  lifespan.py  schema.py  storage.py  tools.py  upload.py
backend/app/api/: assistants.py  runs.py  threads.py
backend/migrations/: 000002_checkpoints_update_schema.up.sql
backend/tests/unit_tests/app/: test_app.py
tools/redis_to_postgres/: migrate_data.py
