[tool.poetry]
name = "backend2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sse-starlette = "^2.1.3"
tomli-w = "^1.1.0"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
orjson = "^3.10.12"
python-multipart = "^0.0.18"
tiktoken = "^0.8.0"
langchain = "^0.3.9"
langgraph = "^0.2.53"
pydantic = "<2.10.0"
langchain-openai = "^0.2.10"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.35.71"
duckduckgo-search = "^6.3.7"
arxiv = "^2.1.3"
kay = "^0.1.2"
xmltodict = "^0.14.2"
wikipedia = "^1.4.0"
langchain-google-vertexai = "^2.0.8"
setuptools = "^75.6.0"
pdfminer-six = "^20240706"
fireworks-ai = "^0.15.9"
httpx = {version = "^0", extras = ["socks"]}
unstructured = {version = "^0", extras = ["doc", "docx"]}
pgvector = "^0.3.6"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
langchain-core = "^0.3.21"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
langchain-anthropic = "^0.3.0"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
langchain-experimental = "^0.3.3"
langgraph-checkpoint-postgres = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
